--- a/obsidian.css
+++ b/obsidian.css
@@ -130,9 +130,9 @@ Disabled features */
   --base-s:0%;      /* Base saturation */
   --base-d:15%;     /* Base lightness Dark Mode  - 0 is black */
   --base-l:96%;     /* Base lightness Light Mode  - 100 is white */
-  --accent-h:201;   /* Accent hue */
-  --accent-s:17%;   /* Accent saturation */
-  --accent-d:60%;   /* Accent lightness Dark Mode */
+  --accent-h:359;   /* Accent hue */
+  --accent-s:100%;   /* Accent saturation */
+  --accent-d:65%;   /* Accent lightness Dark Mode */
   --accent-l:50%;   /* Accent lightness Light Mode */
 
   /*----------------------------------------------------------------
@@ -141,7 +141,7 @@ Disabled features */
 
   Change this to "pointer" if you like the normal style better */
 
-  --cursor:default;
+  --cursor:pointer;
 
   /*----------------------------------------------------------------
 
@@ -165,14 +165,14 @@ Disabled features */
   --font-smaller:11px;
   --font-smallest:10px;
 
-  --font-title:1.1em;
+  --font-title:1.15em;
 
-  --h1:1.125em;
-  --h2:1.05em;
-  --h3:1em;
-  --h4:0.90em;
-  --h5:0.85em;
-  --h6:0.85em;
+  --h1:1.75em;
+  --h2:1.5em;
+  --h3:1.25em;
+  --h4:1em;
+  --h5:1em;
+  --h6:1em;
 
   --h1-weight:600;
   --h2-weight:600;
