--- a/obsidian.css
+++ b/obsidian.css
@@ -126,9 +126,9 @@ Disabled features */
 
   */
 
-  --base-h:0;       /* Base hue */
-  --base-s:0%;      /* Base saturation */
-  --base-d:15%;     /* Base lightness Dark Mode  - 0 is black */
+  --base-h:26;       /* Base hue */
+  --base-s:15%;      /* Base saturation */
+  --base-d:12%;     /* Base lightness Dark Mode  - 0 is black */
   --base-l:96%;     /* Base lightness Light Mode  - 100 is white */
   --accent-h:359;   /* Accent hue */
   --accent-s:100%;   /* Accent saturation */
@@ -184,7 +184,7 @@ Disabled features */
   --normal-weight:400;   /* Switch to 300 if you want thinner default text */
   --bold-weight:600;     /* Switch to 700 if you want thicker bold text */
   --line-width:40rem;    /* Maximum characters per line */
-  --line-height:1.5;
+  --line-height:1.4;     /* prev 1.5 */
   --max-width:88%;       /* Amount of padding around the text, use 90% for narrower padding */
   --nested-padding:3.5%; /* Amount of padding for quotes and transclusions */
   --icon-muted:0.5;
@@ -208,7 +208,7 @@ Disabled features */
   --pink:#b05279;
   --cyan:#73bbb2;
   --blue:#6c99bb;
-
+  --uxj-white:hsl(34deg 50% 80%); /* New */
 }
 
 /* Desktop font sizes */
@@ -309,7 +309,8 @@ body {
 
   --text-header:hsl(33, 26%, 78%); /* NEW */
 
-  --text-normal:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 67%));
+  /* --text-normal:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 67%)); */
+  --text-normal:var(--uxj-white);
   --text-muted:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 45%));
   --text-faint:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 20%));
 
@@ -323,8 +324,11 @@ body {
 
   --text-code:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 60%));
 
-  --background-primary:hsl(var(--base-h),var(--base-s),var(--base-d));
-  --background-primary-alt:hsl(var(--base-h),var(--base-s),calc(var(--base-d) - 2%));
+  --background-primary:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 3%));
+  --background-primary-alt:hsl(var(--base-h),var(--base-s),var(--base-d));
+  /* --background-primary:hsl(var(--base-h),var(--base-s),var(--base-d)); */
+  /* --background-primary-alt:hsl(var(--base-h),var(--base-s),calc(var(--base-d) - 2%)); */
+  
   --background-secondary:hsl(var(--base-h),var(--base-s),calc(var(--base-d) - 2%));
   --background-secondary-alt:hsl(var(--base-h),var(--base-s),var(--base-d));
   --background-tertiary:hsla(var(--base-h),var(--base-s),calc(var(--base-d) + 8%),0.4);
@@ -1475,7 +1479,7 @@ Desktop Styling
 /* Headings and fonts */
 
 h1,h2,h3,h4,h5,strong {font-weight:var(--bold-weight);}
-h1,h2,h3,h4 {letter-spacing:-0.02em;} 
+h1,h2,h3,h4 {letter-spacing:normal;} 
 
 body, input, button  {
   font-family:var(--font-ui);
@@ -1523,7 +1527,7 @@ body, input, button,
 .view-header-title,
 .file-embed-title,
 .markdown-embed-title {
-  letter-spacing:-0.02em;
+  letter-spacing:normal;
   text-align:left;
   font-size:var(--font-title);
   font-weight:var(--bold-weight);
@@ -1532,7 +1536,7 @@ h1,
 .empty-state-title,
 .markdown-preview-view h1,
 .cm-s-obsidian .cm-header-1 {
-  letter-spacing:-0.02em;
+  letter-spacing:normal;
   line-height:1.3;
   font-size:var(--h1);
   color:var(--h1-color);
@@ -1540,7 +1544,7 @@ h1,
 }
 .markdown-preview-view h2,
 .cm-s-obsidian .cm-header-2 {
-  letter-spacing:-0.02em;
+  letter-spacing:normal;
   line-height:1.3;
   font-size:var(--h2);
   color:var(--h2-color);
@@ -2249,7 +2253,8 @@ body.is-dragging {
   padding:0;
 }
 .workspace-split .workspace-tabs {
-  background:var(--background-primary);
+  /* background:var(--background-primary); */
+  background:var(--background-primary-alt);
 }
 .workspace-split:not(.mod-right-split) .workspace-tabs {
   background:var(--background-secondary);
@@ -3918,7 +3923,8 @@ input.search-input:focus {
 }
 .workspace-split.mod-right-split .view-content {
   padding:0;
-  background-color:var(--background-primary);
+  /* background-color:var(--background-primary); */
+  background-color:var(--background-primary-alt);
 }
 
 
