--- a/obsidian.css
+++ b/obsidian.css
@@ -59,6 +59,7 @@ Desktop Styling
   Window frame
   Title bar
   Editor mode
+    Markdown > Emphasis
   Form inputs
   Internal search
   Sidebar documents
@@ -148,10 +149,10 @@ Disabled features */
   Font styles
 
   /* Preview font */
-  --text:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+  --text:Karla,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   
   /* Editor font */
-  --text-editor:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+  --text-editor:Karla,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   
   /* Code font */
   --font-monospace:Menlo,SFMono-Regular,Consolas,"Roboto Mono",monospace;
@@ -174,15 +175,11 @@ Disabled features */
   --h5:1.16em;
   --h6:1.16em;
 
-  --h1-weight:700;
-  --h2-weight:700;
-  --h3-weight:700;
-  --h4-weight:700;
-  --h5-weight:500;
-  --h6-weight:500;
+  --weight-normal:400;   /* Switch to 300 if you want thinner default text */
+  --weight-semi-bold:500;
+  --weight-bold:600;     /* Switch to 700 if you want thicker bold text */
+  --weight-extra-bold:800;
 
-  --normal-weight:400;   /* Switch to 300 if you want thinner default text */
-  --bold-weight:700;     /* Switch to 700 if you want thicker bold text */
   --line-width:40rem;    /* Maximum characters per line */
   --line-height:1.4;     /* prev 1.5 */
   --max-width:88%;       /* Amount of padding around the text, use 90% for narrower padding */
@@ -209,11 +206,13 @@ Disabled features */
   --cyan:#73bbb2;
   --blue:#6c99bb;
   
-  /* uxj New Color variables */
+  /* uxjavi New Color variables */
   --uxj-white:hsl(34deg 50% 80%); /* New */
-  --uxj-red:hsl(345, 77%, 55%);
-  --uxj-orange:hsl(13, 100%, 59%);
-  --uxj-yellow:hsl(43, 97%, 56%);
+  --uxj-red-100:hsl(345, 77%, 55%);
+  --uxj-orange-100:hsl(13, 100%, 59%);
+  --uxj-orange-30:hsla(13, 100%, 59%, 0.35);
+  --uxj-yellow-100:hsl(43, 97%, 56%);
+  --uxj-yellow-85:hsla(43, 97%, 56%, 0.85);
   --uxj-blue:hsl(192, 70%, 56%);
 }
 
@@ -318,15 +317,17 @@ body {
   /* --text-normal:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 67%)); */
   --text-normal:var(--uxj-white);
   --text-muted:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 45%));
-  --text-faint:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 20%));
+  /* --text-faint:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 20%)); */
+  --text-faint:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 30%));
 
   /* --text-accent:hsl(var(--accent-h),var(--accent-s),var(--accent-d)); */
-  --text-accent:var(--uxj-orange);
+  --text-accent:var(--uxj-orange-100);
   --text-accent-hover:hsl(var(--accent-h),var(--accent-s),calc(var(--accent-d) + 12%));
   --text-on-accent:white;
 
   --text-selection:hsla(var(--accent-h),70%,40%,30%);
-  --text-highlight-bg:rgba(255, 177, 80, 0.3);
+  /* --text-highlight-bg:rgba(255, 177, 80, 0.3); */
+  --text-highlight-bg:var(--uxj-orange-30);
   --text-highlight-bg-active:rgba(255, 255, 255, 0.1);
 
   --text-code:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 60%));
@@ -358,8 +359,9 @@ body {
 
   --icon-color:var(--text-muted);
   --icon-hex:FFF;
-  --interactive-accent:hsl(var(--accent-h),var(--accent-s),calc(var(--accent-d) - 20%));
-  --interactive-accent-hover:hsl(var(--accent-h),var(--accent-s),calc(var(--accent-d) - 15%));
+  /* --interactive-accent:hsl(var(--accent-h),var(--accent-s),calc(var(--accent-d) - 20%)); */
+  --interactive-accent:var(--uxj-red-100);
+  --interactive-accent-hover:hsl(var(--accent-h),var(--accent-s),calc(var(--accent-d) - 8%));
   --quote-opening-modifier:hsl(var(--base-h),var(--base-s),calc(var(--base-d) + 10%));
   --interactive-accent-rgb:66, 66, 66;
 
@@ -414,9 +416,9 @@ body {
 
 .theme-light,
 .theme-dark {
-  --h1-color:var(--uxj-red);
-  --h2-color:var(--uxj-red);
-  --h3-color:var(--uxj-red);
+  --h1-color:var(--uxj-red-100);
+  --h2-color:var(--uxj-red-100);
+  --h3-color:var(--uxj-red-100);
   --h4-color:var(--text-normal);
   --h5-color:var(--text-normal);
   --h6-color:var(--text-muted);
@@ -1486,7 +1488,9 @@ Desktop Styling
 
 /* Headings and fonts */
 
-h1,h2,h3,h4,h5,strong {font-weight:var(--bold-weight);}
+h1,h2,h3,h4,h5 {font-weight:var(--weight-bold);}
+strong {color:var(--uxj-yellow-100);}
+/* h1,h2,h3,h4,h5,strong {font-weight:var(--bold-weight);} */
 h1,h2,h3,h4 {letter-spacing:-0.03em;} 
 
 body, input, button  {
@@ -1503,7 +1507,7 @@ body, input, button,
 .cm-s-obsidian .cm-formatting-hashtag,
 .cm-s-obsidian {
   font-size:var(--font-adaptive-normal);
-  font-weight:var(--normal-weight);
+  font-weight:var(--weight-normal);
   line-height:var(--line-height);
   -webkit-font-smoothing:subpixel-antialiased;
 }
@@ -1521,7 +1525,8 @@ body, input, button,
 }
 .cm-s-obsidian .cm-header,
 .cm-s-obsidian .cm-strong {
-  font-weight:var(--bold-weight);
+  font-weight:var(--weight-bold);
+  color: var(--uxj-yellow-100);
 }
 .cm-formatting-header,
 .cm-s-obsidian .cm-formatting-header.cm-header-1,
@@ -1538,7 +1543,7 @@ body, input, button,
   letter-spacing:normal;
   text-align:left;
   font-size:var(--font-title);
-  font-weight:var(--bold-weight);
+  font-weight:var(--weight-bold);
 }
 h1,
 .empty-state-title,
@@ -1548,7 +1553,7 @@ h1,
   line-height:1.3;
   font-size:var(--h1);
   color:var(--h1-color);
-  font-weight:var(--h1-weight);
+  font-weight:var(--weight-bold);
 }
 .markdown-preview-view h2,
 .cm-s-obsidian .cm-header-2 {
@@ -1556,7 +1561,7 @@ h1,
   line-height:1.3;
   font-size:var(--h2);
   color:var(--h2-color);
-  font-weight:var(--h2-weight);
+  font-weight:var(--weight-bold);
 }
 .markdown-preview-view h3,
 .cm-s-obsidian .cm-header-3 {
@@ -1564,15 +1569,15 @@ h1,
   line-height:1.4;
   font-size:var(--h3);
   color:var(--h3-color);
-  font-weight:var(--h3-weight);
+  font-weight:var(--weight-bold);
 }
 .markdown-preview-view h4,
 .cm-s-obsidian .cm-header-4 {
-  font-variant:small-caps;
+  /* font-variant:small-caps; */
   letter-spacing:0.02em;
   font-size:var(--h4);
-  color:var(--h4-color);
-  font-weight:var(--h4-weight);
+  color:var(--uxj-red-100);
+  font-weight:var(--weight-bold);
 }
 .markdown-preview-view h5,
 .cm-s-obsidian .cm-header-5 {
@@ -1580,7 +1585,7 @@ h1,
   letter-spacing:0.02em;
   font-size:var(--h5);
   color:var(--h5-color);
-  font-weight:var(--h5-weight);
+  font-weight:var(--weight-bold);
 }
 .markdown-preview-view h6,
 .cm-s-obsidian .cm-header-6 {
@@ -1588,7 +1593,7 @@ h1,
   letter-spacing:0.02em;
   font-size:var(--h6);
   color:var(--h6-color);
-  font-weight:var(--h6-weight);
+  font-weight:var(--weight-bold);
 }
 
 /* ---------------------- */
@@ -1747,7 +1752,7 @@ a.tag {
   background-color:transparent;
   border:1px solid var(--background-modifier-border);
   /* color:var(--text-muted); */
-  color:var(--uxj-yellow);
+  color:var(--uxj-yellow-100);
   font-size:var(--font-adaptive-small);
   font-family:var(--font-ui);
   padding:2px 8px;
@@ -2619,6 +2624,21 @@ body:not(.is-mobile).minimal-folding .markdown-source-view.mod-cm6.is-readable-l
 }
 
 /* --------------- */
+/* Editor mode Markdown Emphasis  */
+
+/* Italic (Dark Theme) */
+
+.theme-dark .cm-em,
+.theme-dark em {
+    color: var(--uxj-yellow-85);
+}
+
+.theme-dark em:hover {
+    color: var(--uxj-yellow-100);
+
+}
+
+/* --------------- */
 /* Editor mode (Classic) */
 
 .theme-light .token.operator,
@@ -3120,21 +3140,24 @@ select:hover {
 input[type=checkbox] {
   -webkit-appearance:none;
   appearance:none;
-  border-radius:50%;
-  border:1px solid var(--background-modifier-border-hover);
+  /* border-radius:50%; */
+  border-radius:30%;
+  /* border:1px solid var(--background-modifier-border-hover); */
+  border:1px solid var(--text-faint);
   padding:0;
 }
 input[type=checkbox]:focus,input[type=checkbox]:hover {
   outline:0;
-  border-color:var(--text-faint);
+  /* border-color:var(--text-faint); */
+  border-color:var(--text-normal);
 }
 .checklist-plugin-main .group .compact > .toggle .checked,
 .is-flashing input[type=checkbox]:checked,
 input[type=checkbox]:checked {
-  background-color:var(--background-modifier-accent) !important;
-  border:1px solid var(--background-modifier-accent);
+  background-color:var(--uxj-red-100);
+  border:1px solid var(--uxj-red-100);
   background-position:center;
-  background-size:70%;
+  /* background-size:70%; */
   background-repeat:no-repeat;
   background-image:url('data:image/svg+xml; utf8, <svg width="12px" height="10px" viewBox="0 0 12 8" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(-4.000000, -6.000000)" fill="%23ffffff"><path d="M8.1043257,14.0367999 L4.52468714,10.5420499 C4.32525014,10.3497722 4.32525014,10.0368095 4.52468714,9.8424863 L5.24777413,9.1439454 C5.44721114,8.95166768 5.77142411,8.95166768 5.97086112,9.1439454 L8.46638057,11.5903727 L14.0291389,6.1442083 C14.2285759,5.95193057 14.5527889,5.95193057 14.7522259,6.1442083 L15.4753129,6.84377194 C15.6747499,7.03604967 15.6747499,7.35003511 15.4753129,7.54129009 L8.82741268,14.0367999 C8.62797568,14.2290777 8.3037627,14.2290777 8.1043257,14.0367999"></path></g></g></svg>');
 }
@@ -3276,9 +3299,11 @@ input[type=checkbox]:checked {
 
 .tooltip {
   font-size:var(--font-adaptive-small);
-  line-height:1.2;
-  padding:4px 8px;
-  border-radius:4px;
+  line-height:1.4em;
+  padding:8px 12px;
+  border-radius:8px;
+  background-color: var(--text-normal);
+  color:var(--background-secondary);
 }
 .nav-file {
   margin-left:12px;
@@ -3298,7 +3323,8 @@ input[type=checkbox]:checked {
 .nav-file-title.is-active,
 body:not(.is-grabbing) .nav-file-title.is-active:hover {
   background-color:var(--background-tertiary);
-  color:var(--text-normal);
+  /* color:var(--text-normal); */
+  color:var(--uxj-yellow-100);
 }
 .nav-file-title-content {
   width:100%;
@@ -3340,7 +3366,7 @@ body:not(.is-grabbing) .nav-folder-title:hover {
 .search-result-file-title {
   font-size:var(--font-adaptive-small);
   color:var(--text-normal);
-  font-weight:var(--normal-weight);
+  font-weight:var(--weight-normal);
 }
 .side-dock-collapsible-section-header {
   font-size:var(--font-adaptive-small);
@@ -4212,8 +4238,61 @@ a[href*="obsidian://search"] {
   background-image:url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' width='17' height='17' class='search'><path fill='white' stroke='white' stroke-width='2' d='M42,6C23.2,6,8,21.2,8,40s15.2,34,34,34c7.4,0,14.3-2.4,19.9-6.4l26.3,26.3l5.6-5.6l-26-26.1c5.1-6,8.2-13.7,8.2-22.1 C76,21.2,60.8,6,42,6z M42,10c16.6,0,30,13.4,30,30S58.6,70,42,70S12,56.6,12,40S25.4,10,42,10z'></path></svg>");
 }
 
+/* --------------- */
+/* Internal Links */
+
+/* Resolved Links */
+.markdown-preview-view .internal-link {
+  text-decoration: none;
+  font-weight: var(--weight-bold);
+  border-bottom: 1px solid currentColor;
+}
+
+.markdown-preview-view .internal-link:hover {
+  color: var(--uxj-yellow-100);
+}
+
+.markdown-source-view.mod-cm6 .cm-underline {
+  text-decoration: none;
+}
+
+.cm-s-obsidian span.cm-hmd-internal-link,
+.cm-s-obsidian span.cm-hmd-internal-link:hover {
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+}
+
+.cm-s-obsidian span.cm-hmd-internal-link:hover {
+  color: var(--uxj-yellow-100);
+}
+
+/* ----------------- */
+/* Unresolved Links */
+.markdown-preview-view
+.internal-link.is-unresolved {
+  color: var(--interactive-accent-hover);
+  border-bottom: 1px double currentColor;
+  border-width: 4px;
+}
+
+.markdown-preview-view
+.internal-link.is-unresolved:hover {
+  color: var(--uxj-yellow-100);
+}
+
+/* --------------- */
+/* External Links */
+
+.external-link {
+  text-decoration: none;
+}
+
+.external-link:hover {
+  color: var(--uxj-yellow-100);
+}
+
 /* Links and underline handling*/
-.minimal-theme:not(.links-int-on) a[href*="obsidian://"],
+/* .minimal-theme:not(.links-int-on) a[href*="obsidian://"],
 .minimal-theme:not(.links-int-on) .markdown-preview-view .internal-link,
 .minimal-theme:not(.links-ext-on) .external-link,
 .minimal-theme:not(.links-ext-on) .cm-link .cm-underline,
@@ -4223,20 +4302,23 @@ a[href*="obsidian://search"] {
 .minimal-theme:not(.links-int-on) .cm-s-obsidian span.cm-hmd-internal-link:hover {
   text-decoration:none;
 }
+
 .minimal-theme.links-int-on .is-live-preview .cm-hmd-internal-link,
 .minimal-theme.links-int-on .markdown-preview-view .internal-link,
 .markdown-preview-view .internal-link {
-  text-decoration:underline;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  font-weight: var(--weight-bold);
 }
 .minimal-theme.links-ext-on .external-link,
 .external-link {
-  text-decoration:underline;
+  text-decoration: none;
 }
 .is-live-preview.cm-s-obsidian span.cm-hmd-internal-link:hover,
 .is-live-preview.cm-s-obsidian span.cm-url:hover,
 .is-live-preview.cm-s-obsidian span.cm-link:hover {
   color:var(--text-accent-hover);
-}
+} */
 
 .footnotes-list {
   margin-block-start:-10px;
@@ -4412,7 +4494,7 @@ audio::-webkit-media-controls-panel {
 
 .markdown-source-view.mod-cm6 th,
 .markdown-preview-view th {
-  font-weight:var(--bold-weight);
+  font-weight:var(--weight-bold);
   font-size:calc(var(--font-adaptive-normal) - 2px);
   text-align:left;
   border-top:none;
@@ -5230,7 +5312,7 @@ body.minimal-folding.is-mobile .view-header-title,
   padding:20px 10px 0 25px;
 }
 .is-mobile .workspace-drawer-header-name {
-  font-weight:var(--bold-weight);
+  font-weight:var(--weight-bold);
   color:var(--text-normal);
   font-size:1.125em;;
 }
@@ -5532,7 +5614,7 @@ body.is-mobile:not(.minimal-icons-off) .menu-item-icon svg {
 }
 .is-mobile .menu-item.is-label {
   color:var(--text-normal);
-  font-weight:var(--bold-weight);
+  font-weight:var(--weight-bold);
 }
 .is-mobile .menu-item.is-label .menu-item-icon {
   display:none;
